--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: #fff;
+    background-color: #9e9090;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
 }
@@ -44,6 +44,7 @@ nav a:hover {
 }
 
 .hero {
+    background-color: #7e685b;
     text-align: center;
     padding: 150px 0;
     background-image: url('hero-bg.jpg');
@@ -75,7 +76,7 @@ nav a:hover {
 }
 
 .menu {
-    padding: 100px 0;
+    padding: 30px 0;
     text-align: center;
 }
 
@@ -116,6 +117,18 @@ nav a:hover {
 .contact p {
     font-size: 18px;
     margin-bottom: 40px;
+}
+
+.Coffee li{
+    display: inline-block;
+}
+
+.Dessert li{
+    display: inline-block;
+}
+
+.Dessert{
+    padding: 30px 0;
 }
 
 footer {
