--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,12 @@ nav a:hover {
     display: inline-block;
 }
 
+.Coffee li img{
+    width:349px ;
+    height: inherit;
+
+}
+
 .Dessert{
     padding: 30px 0;
 }
