--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,9 @@ body {
 }
 
 header {
-    background-color: #9e9090;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    background-color: #d7cdcd;
+    box-shadow: 0 2px 5px rgba(122, 80, 80, 0.1);
+    
 }
 
 nav {
@@ -24,12 +24,14 @@ nav {
 
 .logo img {
     max-width: 100px;
+    margin-left: 50px;
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 30px;
+    margin-right: 150px;
 }
 
 nav a {
@@ -44,17 +46,23 @@ nav a:hover {
 }
 
 .hero {
-    background-color: #7e685b;
-    text-align: center;
-    padding: 150px 0;
-    background-image: url('hero-bg.jpg');
+    background-image: url('/img/welcome_bg.png');
+    text-align: left;
+    padding: 170px 50px;
     background-size: cover;
     color: white;
+    height: 40vh;
+    background-position: center;
+    background-repeat: no-repeat;
+
+     
+
 }
 
 .hero h1 {
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+ 
 }
 
 .hero p {
@@ -68,7 +76,8 @@ nav a:hover {
     background-color: #4c3c32;
     color: white;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 50px;
+    
 }
 
 .cta-button:hover {
@@ -119,28 +128,81 @@ nav a:hover {
     margin-bottom: 40px;
 }
 
-.Coffee li{
-    display: inline-block;
-}
-
-.Dessert li{
-    display: inline-block;
-}
-
-.Coffee li img{
-    width:349px ;
-    height: inherit;
-    
-}
-
-.Dessert li img {
-    width:349px ;
-    height: inherit;
-}
-
 footer {
     background-color: #4c3c32;
     color: white;
     text-align: center;
     padding: 20px 0;
 }
+
+
+
+section.products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      padding: 50px;
+    }
+
+    article.product {
+      background: #1a1a1a;
+      border-radius: 15px;
+      padding: 20px;
+      text-align: center;
+      color: #fff;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      transition: transform 0.2s ease;
+    }
+
+    article.product:hover {
+      transform: translatey(-10px);
+    }
+
+    figure {
+      margin: 0;
+    }
+
+    figure img {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.6);
+    }
+
+    .details {
+      margin-bottom: 12px;
+    }
+
+    .price {
+      font-size: 14px;
+      color: #ccc;
+    }
+
+    .weight {
+      font-size: 14px;
+      color: #aaa;
+    }
+
+    h2.title {
+      font-size: 16px;
+      font-weight: bold;
+      margin: 8px 0;
+      line-height: 1.3;
+    }
+
+    button {
+      background-color: #f89c2f;
+      color: #111;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      background-color: #ffa733;
+    }
